second commit removing links

--- a/generic.html
+++ b/generic.html
@@ -83,11 +83,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+573126107222</a></p>
+								<p><a>+573126107222</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">andrestroa@yahoo.com</a></p>
+								<p><a>andrestroa@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
